@@ -504,3 +504,42 @@ __libdw_frame_at_address (Dwarf_CFI *cache, struct dwarf_fde *fde,
     }
   return result;
 }
+
+int
+dwarf_cfi_validate_fde (cache, offset, start, end, signalp, encoding)
+     Dwarf_CFI *cache;
+     Dwarf_Off offset;
+     Dwarf_Addr *start;
+     Dwarf_Addr *end;
+     bool *signalp;
+     uint8_t *encoding;
+{
+  if (cache == NULL)
+    return -1;
+
+  struct dwarf_fde *fde = __libdw_fde_by_offset (cache, offset);
+  if (unlikely (fde == NULL))
+    return -1;
+
+  Dwarf_Frame *fs;
+  int result = __libdw_frame_at_address (cache, fde, fde->end, &fs);
+  if (unlikely (result != DWARF_E_NOERROR))
+    {
+      __libdw_seterrno (result);
+      return -1;
+    }
+
+  result = fs->nregs + 1;
+  free (fs);
+
+  if (start != NULL)
+    *start = fde->start;
+  if (end != NULL)
+    *end = fde->end;
+  if (signalp != NULL)
+    *signalp = fde->cie->signal_frame;
+  if (encoding != NULL)
+    *encoding = fde->cie->fde_encoding;
+
+  return result;
+}
